--- a/Geo Regions Test/Base.lproj/Main.storyboard
+++ b/Geo Regions Test/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ibQ-5d-tqo">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="x3p-dM-zht">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="x3p-dM-zht">
                                 <rect key="frame" x="0.0" y="20" width="600" height="452"/>
                             </mapView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJp-3F-Ce5">
@@ -41,6 +41,18 @@
                             <constraint firstItem="x3p-dM-zht" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rt8-bN-sd8"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="c90-h1-oSF">
+                        <barButtonItem key="leftBarButtonItem" title="Stop" id="Oq5-0T-Kdf">
+                            <connections>
+                                <action selector="onStopButtonTapped:" destination="BYZ-38-t0r" id="eOU-aE-6MW"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Start" id="hcf-JI-zVg">
+                            <connections>
+                                <action selector="onStartButtonTapped:" destination="BYZ-38-t0r" id="eSx-7S-JSJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="logView" destination="aJp-3F-Ce5" id="nwJ-7q-w8G"/>
                         <outlet property="mapView" destination="x3p-dM-zht" id="qzN-Zq-AmS"/>
@@ -48,6 +60,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1059" y="350"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HqV-9G-DBz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ibQ-5d-tqo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hVo-lL-4RH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LPD-Wv-2TO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IlG-Zg-mB9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="224" y="1011"/>
         </scene>
     </scenes>
 </document>
